Cleanup build and build modification hacks a bit. #SCL-13025 fixed